@@ -18,8 +18,9 @@ synaptic (0.57.12) UNRELEASED; urgency=low
   * added support for GUI configuraton of http proxy
   * translation updates:
     - cs.po: thanks to Vít Pelcak
+  * make description buffer dynamic (thanks to Benjamin Jacobs)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  2 Nov 2006 13:22:41 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  4 Jan 2007 10:15:41 +0100
 
 synaptic (0.57.11) unstable; urgency=low
 
